--- a/centos8_kvm.yaml
+++ b/centos8_kvm.yaml
@@ -1,5 +1,5 @@
 - name : create a centos 8 vm on remote kvm host
-  hosts: hypervisors
+  hosts: hypervisor
   become: true
   roles:
     - hosninabil.kvm_terraform.centos
