--- a/collections/ansible_collections/hosninabil/linux_server/roles/basic/handlers/main.yml
+++ b/collections/ansible_collections/hosninabil/linux_server/roles/basic/handlers/main.yml
@@ -4,3 +4,12 @@
   service:
     name: sshd
     state: restarted
+- name: rebooot host and wait to confirm
+  reboot:
+    test_command: echo "reboot done via ansible"
+- name: Start & enable the vncserver
+  systemd:
+    state: started
+    daemon_reload: yes
+    name: vncserver@:1
+    enabled: True
