+extend disk role +- centos

--- a/collections/ansible_collections/hosninabil/kvm_terraform/roles/cleanup/tasks/main.yml
+++ b/collections/ansible_collections/hosninabil/kvm_terraform/roles/cleanup/tasks/main.yml
@@ -6,5 +6,5 @@
     state: absent
 - name: Ensure added disk are deleted
   file:
-    path: "{{ pool_path }}/disk_name.qcow2"
+    path: "{{ pool_path }}/{{ disk_name }}.qcow2"
     state: absent
