tweaking disk clean up compatibility

--- a/collections/ansible_collections/hosninabil/kvm_terraform/roles/extend_disk/tasks/main.yml
+++ b/collections/ansible_collections/hosninabil/kvm_terraform/roles/extend_disk/tasks/main.yml
@@ -8,5 +8,5 @@
   poll: 10
 - name: Extend vm root disk
   shell: |
-    qemu-img resize {{ pool_path }}/{{ vm_volume_name }}.qcow2 +{{ size }}
+    qemu-img resize {{ pool_path }}/{{ vm_hostname }}.qcow2 +{{ size }}
   notify: Start VM
