--- a/post-install.yaml
+++ b/post-install.yaml
@@ -1,8 +1,6 @@
-- name : Harden ssh and update
+- name : Post install
   hosts: terraform
   become: true
   tasks:
     - include_role:
         name: hosninabil.linux_server.basic
-      vars:
-        hostname: 'http-server.infra.otbs.local'
