--- a/post-install.yaml
+++ b/post-install.yaml
@@ -3,4 +3,4 @@
   become: true
   tasks:
     - include_role:
-        name: hosninabil.linux_server.basic
+        name: hosninabil.linux_server.post-install
