post-install playbook tweaks

--- a/post-install.yaml
+++ b/post-install.yaml
@@ -4,3 +4,6 @@
   tasks:
     - include_role:
         name: hosninabil.linux_server.post_install
+      vars:
+        - user: nabil
+        - vm_hostname: test
