--- a/post-install-rhel.yaml
+++ b/post-install-rhel.yaml
@@ -3,6 +3,7 @@
   become: true
   tasks:
     - name: Register with Red Hat subscription manager
+      redhat_subscription:
         state: present
         username: "{{ rhsm_user }}"
         password: "{{ rhsm_pw }}"
