temporary packages change

--- a/collections/ansible_collections/hosninabil/linux_server/roles/nfs/tasks/main.yml
+++ b/collections/ansible_collections/hosninabil/linux_server/roles/nfs/tasks/main.yml
@@ -2,8 +2,9 @@
 # tasks file for nfs
 - name: Install NFS required packages
   package:
-    name: nfs-utils, python3, python3-firewall, firewalld
+    name: nfs-utils
     state: present
+
 - name: Create shared directory
   file:
     path: "/{{ shared_dir }}"
