--- a/collections/ansible_collections/hosninabil/kvm_terraform/roles/terraform/tasks/main.yml
+++ b/collections/ansible_collections/hosninabil/kvm_terraform/roles/terraform/tasks/main.yml
@@ -20,12 +20,12 @@
     remote_src: true
 - name: Create plugins directory
   file:
-    path: "~/.local/share/terraform/plugins/registry.terraform.io/dmacvicar/libvirt/0.6.3/linux_amd64"
+    path: "/root/.local/share/terraform/plugins/registry.terraform.io/dmacvicar/libvirt/0.6.3/linux_amd64"
     state: directory
     mode: 0755
 - name: Clone provider plugin source
   git:
     repo: "{{ terraform_libvirt_provider_git }}"
-    dest: "terraform-provider-libvirt"
+    dest: /root/terraform-provider-libvirt
     force: true
   notify: Build provider plugin from source
