--- a/kvm_rhel.yaml
+++ b/kvm_rhel.yaml
@@ -4,3 +4,14 @@
   tasks:
     - include_role:
         name: hosninabil.kvm_terraform.rhel
+      vars:
+        rhel_version: '8'
+        terraform_dir: /root/nfs
+        vm_cpu: 1
+        vm_dns: 8.8.8.8
+        vm_gw: 10.112.42.254
+        vm_hostname: nfs-server
+        vm_ip: 10.112.42.55/24
+        vm_memory: 2048
+        vm_network: vlan42
+        vm_user: nabil
