--- a/collections/ansible_collections/hosninabil/linux_server/roles/haproxy/handlers/main.yml
+++ b/collections/ansible_collections/hosninabil/linux_server/roles/haproxy/handlers/main.yml
@@ -1,2 +1,11 @@
 ---
 # handlers file for haproxy
+- name: Restart and enable rsyslog service
+  service:
+    name: rsyslog
+    state: restarted
+- name: Restart and enable HAproxy
+  service:
+    name: haproxy
+    state: restarted
+    enabled: true
