--- a/collections/ansible_collections/hosninabil/kvm_terraform/roles/centos/handlers/main.yml
+++ b/collections/ansible_collections/hosninabil/kvm_terraform/roles/centos/handlers/main.yml
@@ -2,4 +2,4 @@
 # handlers file for centos
 - name: Init terraform directory
   shell: |
-    terraform init {{ terraform_dir }}
+    terraform init /root/{{ vm_hostname }}
