--- a/idm_user.yaml
+++ b/idm_user.yaml
@@ -3,7 +3,7 @@
   become: true
   tasks:
     - name: Create user
-      ipauser:
+      freeipa.ansible_freeipa.ipauser:
         ipaadmin_password: "{{ idm_password }}"
         name: "{{ name }}"
         first: "{{ first_name }}"
