--- a/idm_dnsrecord.yaml
+++ b/idm_dnsrecord.yaml
@@ -3,7 +3,7 @@
   become: true
   tasks:
     - name: Add DNS record
-      freeipa.ansible_freeipa.dnsrecord:
+      freeipa.ansible_freeipa.ipadnsrecord:
         ipaadmin_password: "{{ idm_password }}"
         name: "{{ record_hostname }}"
         zone: "{{ record_zone }}"
