change record fileds

--- a/idm_dnsrecord.yaml
+++ b/idm_dnsrecord.yaml
@@ -6,7 +6,8 @@
       freeipa.ansible_freeipa.ipadnsrecord:
         ipaadmin_password: "{{ idm_password }}"
         name: "{{ record_hostname }}"
-        zone_name:  {{ record_zone }}
-        record_type: 'A'
-        record_value: "{{ record_ip }}"
+        zone_name:  infra.otbs.local
+        a_rec:
+          - "{{ record_ip }}"
+        create_reverse: yes
         state: present
