terraform playbook change host group

--- a/terraform_setup.yaml
+++ b/terraform_setup.yaml
@@ -1,5 +1,5 @@
 - name: Install terraform on remote host
-  hosts: terraformhost
+  hosts: terraform_host
   become: true
   tasks:
     - include_role:
