add domain var for FQDN hostname

--- a/roles/linux_postinstall/tasks/main.yml
+++ b/roles/linux_postinstall/tasks/main.yml
@@ -3,7 +3,7 @@
 #set facts for dist
 #setup hostname FQDN
 - hostname:
-    name: "{{ vm_hostname }}"
+    name: "{{ vm_hostname }}.{{ vm_domain }}"
 #setup ssh
 - name: Setup SSH
   copy:
