--- a/roles/kvm_linux/tasks/main.yml
+++ b/roles/kvm_linux/tasks/main.yml
@@ -78,7 +78,7 @@
     project_path: "/root/{{ vm_hostname }}"
     state: present
     force_init: true
-- name:
+- name: Wait for VM to become reachable
   wait_for:
     host: "{{ vm_ip }}"
     port: 22
