nfs playbook cleanup

--- a/nfs-server.yaml
+++ b/nfs-server.yaml
@@ -1,6 +1,6 @@
 - name: Setup an NFS server
-  hosts: hypervisor
+  hosts: nfs
   become: true
   tasks:
     - include_role:
-        name: hosninabil.linux_server.nfs
+        name: linux_nfs
