update: flexible hostname

--- a/roles/linux_postinstall/tasks/main.yml
+++ b/roles/linux_postinstall/tasks/main.yml
@@ -1,9 +1,8 @@
 ---
 # tasks file for linux_postinstall
-#set facts for dist
 #setup hostname FQDN
 - hostname:
-    name: "{{ vm_hostname }}.{{ vm_domain }}"
+    name: "{{ inventory_hostname }}.{{ vm_domain }}"
 #setup ssh
 - name: Setup SSH
   copy:
