--- a/roles/linux_etcd/tasks/main.yml
+++ b/roles/linux_etcd/tasks/main.yml
@@ -54,7 +54,7 @@
     enabled: true
 - name: Allow ports in firewalld
   firewalld:
-    service: "{{ item }}"
+    port: "{{ item }}"
     permanent: true
     immediate: true
     state: enabled
