--- a/roles/linux_etcd/vars/main.yml
+++ b/roles/linux_etcd/vars/main.yml
@@ -1,3 +1,5 @@
 ---
 # vars file for linux_etcd
 etcd_url: https://github.com/etcd-io/etcd/releases/download/v3.4.16/etcd-v3.4.16-linux-amd64.tar.gz
+start: "${"
+end: "}"
