removing vm_hostname field

--- a/kvm_cleanup_infra.yaml
+++ b/kvm_cleanup_infra.yaml
@@ -5,5 +5,5 @@
     - include_role:
         name: kvm_cleanup
       vars:
-        vm_hostname: "{{ item.vm_hostname }}"
+        vm_hostname: "{{ item }}"
       with_items: "{{ infra }}"
